# Loc_General

./: .gitignore  modulos.txt
abs_pending_po_qty/: __manifest__.py
account_analytic_required/: __manifest__.py
account_authorized_journal/: __manifest__.py
account_invoice_change_currency/: __manifest__.py
account_invoice_line_sequence/: __init__.py  __manifest__.py
account_invoice_select_for_payment/: __manifest__.py
account_payment_advance_peti/: __manifest__.py
account_payment_partner/: README.rst  __manifest__.py
analytic_account_to_picking/: __manifest__.py
auguria_purchase_project/: __init__.py  __manifest__.py
auth_session_timeout/: __init__.py
barcode_stock/: __init__.py  __manifest__.py
bi_convert_purchase_from_sales/: ReadME.txt  __manifest__.py
bi_order_line_with_sequence_number/: __manifest__.py
bi_vendor_registration_request/: Readme.txt  __init__.py  __manifest__.py
cqt_customer_vendor/: __init__.py  __manifest__.py
customer_is_vendor/: __manifest__.py
job_invoice_dian/: __manifest__.py
mss_product_master/: __manifest__.py
nexus_disable_quick_create/: README.rst  __manifest__.py
product_category_tax/: __manifest__.py
purchase_force_invoiced/: README.rst  __manifest__.py
purchase_stock_picking_return_invoicing/: __manifest__.py
restriccion_diarios/: README.md  __manifest__.py
sale-workflow-19.0/: .copier-answers.yml  .pre-commit-config.yaml  README.md
sale-workflow-19.0/setup/_metapackage/: pyproject.toml
sale_force_invoiced/: __manifest__.py
sale_order_currency/: __manifest__.py
stock_request/: README.rst  (+1 more)
(+214 files in other folders)
